Issue #3025280 by chr.fritsch, volkerk, daniel.bosen: Entity browser z-index problem (drupal 8.7)

--- a/css/components/jquery.ui/theme.css
+++ b/css/components/jquery.ui/theme.css
@@ -961,10 +961,6 @@
   background-image:url(../../../images/ui-icons-ffffff-256x240.png);
 }
 
-.ui-widget-overlay{
-  z-index:1300;
-}
-
 .ui-progressbar .ui-progressbar-value{
   background:#0072b9 url(../../../../../misc/progress.gif);
 }
